Markdown styling - remove margins to make content more compact. Revert dropdown_item element hover change as it requires too much rewrite accross the app, needs to be a sparate task - https://github.com/citizenos/citizenos-fe/issues/329

--- a/public/styles/comments.scss
+++ b/public/styles/comments.scss
@@ -494,10 +494,13 @@
                             }
 
                             .argument_text {
-                                font-size: 14px;
                                 margin-bottom: 5px;
                                 word-break: break-word;
                                 white-space: pre-line;
+
+                                p, ul, ol {
+                                    margin: 0;
+                                }
                             }
 
                             .read_more_link {
